[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "bidict~=0.23",
  "case-converter~=1.2",
  "comicfn2dict>=0.3.2,<1.0.0",
  "confuse~=2.2.0",
  "deepdiff~=9.0",
  "glom~=25.12",
  "httpx~=0.28",
  "imagehash>=4.3.2",
  "jsonschema[format]~=4.20",
  "keyring~=25.6",
  "loguru~=0.7",
  "marshmallow-union>=0.1.15.post1",
  "marshmallow~=4.3",
  "mokkari>=3.25.4,<4",
  "nh3>=0.3.5",
  "pillow>=12.2.0",
  "platformdirs>=4.9.6",
  "py7zr~=1.1.0",
  "pycountry~=26.2",
  "python-dateutil~=2.8",
  "questionary>=2.1.1",
  "rapidfuzz>=3.14.5",
  "rarfile~=4.0",
  "rich-argparse~=1.7",
  "rich~=15.0",
  "ruamel-yaml~=0.18",
  "simplejson~=4.0",
  "simyan>=2.0.0,<3",
  "typing-extensions~=4.13",
  "urnparse~=0.2",
  "xmlschema~=4.0",
  "xmltodict~=1.0",
  "zipremove~=0.1",
]
description = "Comic book archive multi format metadata read/write/transform tool and image extractor."
keywords = [
  "cb7",
  "cbr",
  "cbt",
  "cbz",
  "comet",
  "comic",
  "comicbookinfo",
  "comicinfo",
  "metroninfo",
  "pdf",
]
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-only"
name = "comicbox"
version = "4.0.3"
[[project.authors]]
name = "AJ Slater"
email = "aj@slater.net"

[project.urls]
News = "https://comicbox.readthedocs.io/NEWS/"
Documentation = "https://comicbox.readthedocs.io"
Source = "https://github.com/ajslater/comicbox"

[project.optional-dependencies]
pdf = ["comicbox-pdffile>=0.6.2,<0.7"]

[project.scripts]
comicbox = "comicbox.cli:main"

[dependency-groups]
dev = [
  "icecream~=2.1",
  "infer-types~=1.0.0",
  "marshmallow-jsonschema>=0.15.0",
  "neovim~=0.3",
  "packaging>=26.1",
  "pyclean~=3.1",
  "pypi-cleanup~=0.1.10",
  "semver~=3.0.4",
  "toml-cli~=0.7",
  "tomlkit~=0.14",
]
build = []
lint = [
  "basedpyright~=1.38",
  "check-jsonschema~=0.36",
  "codespell~=2.4",
  "complexipy~=6.0",
  "djlint~=1.3.dev0",
  "icecream~=2.1",
  "mbake~=1.4.5",
  "pathspec~=1.1.0",
  "radon[toml]~=6.0",
  "ruff~=0.15",
  "types-python-dateutil~=2.9",
  "types-xmltodict~=1.0",
  "ty~=0.0.17",
  "vulture~=2.3",
]
test = [
  "coverage[toml]~=7.0",
  "pytest-asyncio~=1.0",
  "pytest-cov~=7.0",
  "pytest~=9.0",
]
docs = ["mkapi~=4.4", "mkdocs-minify-plugin~=0.8", "mkdocs~=1.6"]
ci = ["requests~=2.32"]

[build-system]
requires = ["uv_build~=0.11.2"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = [
  ".*ignore",
  ".env.platforms",
  ".picopt_treestamps.yaml",
  ".readthedocs.yaml",
  ".remarkignore",
  ".shellcheckrc",
  "Makefile",
  "NEWS.md",
  "bin/**",
  "bun.lock",
  "cfg/**",
  "check-jsonschema.sh",
  "compose.yaml",
  "docs/DOCKER.md",
  "docs/NEWS",
  "docs/NEWS.md",
  "docs/README.md",
  "docs/WINDOWS.md",
  "docs/requirements.txt",
  "docs/style.css",
  "docs/style.material.css",
  "docs/style.mkdocs.css",
  "docs/style.readthedocs.css",
  "eslint.config.js",
  "frontend/**",
  "generate-schema/**",
  "img/**",
  "mkdocs.yml",
  "mock_comics/**",
  "package.json",
  "tests/**",
  "uv.lock",
  "validate-schema.sh",
  "vulture_ignorelist.py",
]
source-exclude = ["**/*\\~", "**/.DS_Store", "frontend/node_modules"]
wheel-exclude = ["**/*\\~", "**/.DS_Store"]

[tool.basedpyright]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
pythonVersion = "3.10"
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportImportCycles = true
reportIncompatibleUnannotatedOverride = true
reportMissingParameterType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false
reportUnknownLambdaType = "hint"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
reportUnusedParameter = false
reportImplicitStringConcatenation = false
reportUntypedBaseClass = false

[tool.codespell]
builtin = "clear,code,rare"
check-hidden = true
ignore-words-list = "coverd,crate,falsy,iff,jupyter,ro,searchd,thead,versio,wan,warmup,ws"
skip = "*.svg,*~,.*,.*/*,./.venv/*,./bun.lock,./dist,./node_modules,./node_modules/*,./package-lock.json,./package.json,./test-results,./tests/test_files/*,./uv.lock,/uv.lock,__pycache__,bun.lock,dist,htmlcov,node_modules,package.json,test-results,typings,uv.lock"

[tool.complexipy]
failed = true
paths = ["comicbox", "tests"]
exclude = [
  "**/__pycache__",
  ".cache",
  ".git",
  ".github",
  ".venv",
  "frontend",
  "node_modules",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["comicbox"]
branch = true
concurrency = ["multiprocessing"]
omit = [
  "*/.*",
  "*__pycache__*",
  "dist/*",
  "frontend/*",
  "node_modules/*",
  "site/*",
  "test-results/*",
  "typings/*",
  "vulture_ignorelist.py",
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "--cov",
  "--cov-append",
  "--cov-report=html",
  "--cov-report=term",
  "--junit-xml=test-results/pytest/results.xml",
  "--strict-config",
  "--strict-markers",
  "-ra",
]
junit_family = "xunit2"
strict = true
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.radon]
exclude = "*~,.*,.*/*,__pycache__/*,config/*,dist/*,frontend/*,node_modules/*,site/*,test-results/*,typings/*,vulture_ignorelist.py"

[tool.ruff]
builtins = ["ic"]
extend-exclude = [
  "**/.*",
  "**/__pycache__",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]
show-fixes = true
target-version = "py310"

[tool.ruff.lint]
extend-ignore = [
  "BLE001",
  "COM812",
  "COM819",
  "D203",
  "D206",
  "D212",
  "E111",
  "E114",
  "E117",
  "E501",
  "ISC001",
  "PERF203",
  "S101",
  "W191",
]
extend-select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FIX",
  "FLY",
  "FURB",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
external = ["V101"]
task-tags = ["FIXME", "HACK", "TODO", "XXX", "http"]

[tool.ruff.lint.flake8-self]
ignore-names = ["_meta"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "ARG001",
  "ARG002",
  "D101",
  "D102",
  "D103",
  "FBT001",
  "PLR2004",
  "S105",
  "S106",
  "S108",
  "SLF001",
  "T203",
]
"comicbox/run.py" = ["T201", "T203"]
"tests/files/create_cs_archives.py" = ["S603", "S607", "T201"]
"tests/files/create_macos_resource_fork.py" = ["T201"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.ty.src]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "dist",
  "frontend",
  "site",
  "test-results",
  "typings",
  "vulture_ignorelist.py",
]

[tool.ty.rules]
# Marshmallow's SchemaMeta metaclass annotates `Meta: type`, so ty resolves
# `<Schema>.Meta` to the opaque `type` instead of the concrete nested class and
# cannot compute an MRO for `class Meta(<Schema>.Meta)`. That subclassing is the
# documented Marshmallow idiom and basedpyright accepts it, so the warning is a
# false positive.
unsupported-base = "ignore"

[tool.vulture]
exclude = [
  "**/.*",
  "**/__pycache__",
  "**/node_modules",
  "*/.*",
  "*/__pycache__*",
  "*/node_modules*",
  "dist/",
  "frontend/",
  "site",
  "test-results/",
  "test_results/",
  "typings/",
]
min_confidence = 61
sort_by_size = true
